注释记录