@@ -1,7 +1,7 @@
 #!/bin/sh
 
-JAR_NAME=banking-loan-admin-1.0-SNAPSHOT.jar
-JVM="-server -Xms512m -Xmx512m -XX:PermSize=64M -XX:MaxNewSize=128m -XX:MaxPermSize=128m -Djava.awt.headless=true -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled"
+JAR_NAME=banking-core-admin-1.0-SNAPSHOT.jar
+JVM="-server -Xms128m -Xmx512m -XX:MaxNewSize=128m -Djava.awt.headless=true -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled"
 APP_DIR=`pwd`
 
 export SPRING_PROFILES_ACTIVE=$2
@@ -22,12 +22,19 @@ if [ -z "$2" ]; then
 fi
 
 start(){
-    PID=`ps -ef|grep $JAR_NAME|grep -v grep|awk '{print $2}'`
     if [ -n "$PID" ]; then
         echo "$JAR_NAME is running !pid is $PID"
     else
         cd $APP_DIR
-        nohup java $JVM -jar $JAR_NAME --logging.config=config/log4j2-$SPRING_PROFILES_ACTIVE.properties --spring.profiles.active=$SPRING_PROFILES_ACTIVE >/dev/null &
+	mkdir -p /opt/app/file
+        mkdir -p /opt/app/logs
+        mkdir -p /home/mount/file/banking-admin-core/${HOSTNAME}
+        mkdir -p /home/mount/file/banking-admin-core/image
+        mkdir -p /home/mount/logs/banking-admin-core/${HOSTNAME}
+        ln -s /home/mount/file/banking-admin-core /opt/app/file/banking-admin-core
+        ln -s /home/mount/file/banking-admin-core/${HOSTNAME} /opt/app/file
+        ln -s /home/mount/logs/banking-admin-core/${HOSTNAME} /opt/app/logs/banking-admin-core
+	java $JVM -jar $JAR_NAME --logging.config=config/log4j2-$SPRING_PROFILES_ACTIVE.properties --spring.profiles.active=$SPRING_PROFILES_ACTIVE
         if [ $? -eq 0 ]; then
             echo "$JAR_NAME is started success !"
         else
